fix: increase top gap for captcha in contact form and tidy up code

--- a/components/contactForm.css
+++ b/components/contactForm.css
@@ -101,6 +101,7 @@
   height: 200px;
   width: 100%;
   grid-column: 1 / 3;
+  margin-bottom: 15px;
 }
 
 .form-textarea-iput {
